--- a/index.html
+++ b/index.html
@@ -170,6 +170,19 @@
                 <h2 class="section-title">Advanced Technology & Machinery</h2>
                 <p class="section-subtitle">State-of-the-art equipment and modern manufacturing processes</p>
             </div>
+            <!-- Cinematic Video -->
+            <div class="tech-video-wrapper fade-in">
+                <video
+                    muted
+                    autoplay
+                    loop
+                    playsinline
+                    preload="auto"
+                    poster="your-poster.jpg">
+                    <source src="video.mp4" type="video/mp4">
+                </video>
+            </div>
+
             
             <div class="tech-grid">
                 <div class="tech-card">
